--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <span></span>
         </div>
     </div>
-    <h3>FileCat文档</h3>
+    <h3>WelCome FileCat</h3>
     <title></title>
     <a href="https://github.com/xiaobaidadada/filecat" target="_blank" class="github-corner" >
         <img src="/code/resource/github.svg" alt="GitHub" >
